# w3c-did-generator

./: .releaserc.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  release.yml
src/didgen/: generator.py  main.py
tests/: test_my_app.py
