[tool.poetry]
name = "didgen"
version = "0.1.0"
description = "W3C Decentralized Identifier Generator"
authors = ["CedrickArmel <cedrick-armel-yao@outlook.fr>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
didkit = "^0.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.12"
mypy = "^1.4"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.semantic_release]
version_variable = [
    "src/didgen/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.scripts]
didgen = "didgen.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
